--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -38,17 +38,12 @@ html, body {
 	height: 100%;
 	width: 100%;
 }
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: #777;
 	font-size: 14px;
-	line-height: 1.8em;
 	font-weight: 400;
-	overflow-x: hidden;
-	-webkit-text-size-adjust: 100%;
-	-webkit-overflow-scrolling: touch;
-	-webkit-font-smoothing: antialiased;
-	background: #eee url("../images/darkgrain.png") repeat scroll 0 0;
 }
 a {
 	color: #D62472;
@@ -575,7 +570,7 @@ hr.main {
 	padding: 14px 40px;
 }
 .navbar-brand {
-	margin-top: 12px;
+	/*margin-top: 12px;*/
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
 	color: #D62472;
@@ -2966,6 +2961,7 @@ label {
 }
 #logo-footer {
 	margin-bottom: 20px;
+	width: 160px;
 }
 .footer-area p {
 	font-size: 14px;
@@ -3060,28 +3056,7 @@ label {
 	position: absolute;
 	top: 0;
 }
-.social-links-two {
-	position: relative;
-}
-.social-links-two a {
-	border: 1px solid #bcbcbc;
-	border-radius: 50%;
-	color: #bcbcbc ;
-	display: block;
-	float: left;
-	font-size: 12px;
-	height: 28px;
-	line-height: 26px;
-	margin-right: 8px;
-	position: relative;
-	text-align: center;
-	transition: all 500ms ease 0s;
-	o-transition: all500ms ease 0s;
-	-ms-transition: all 500ms ease 0s;
-	-moz-transition: all 500ms ease 0s;
-	-webkit-transition: all 500ms ease 0s;
-	width: 28px;
-}
+
 .blog-news-section .social-links-two a {
 	background: #545454 none repeat scroll 0 0;
 	border: medium none;
@@ -3135,7 +3110,7 @@ label {
 .footer-copyright {
 	border-top: 1px solid rgba(255, 255, 255, 0.1);
 	color: #808080;
-	font-size: 15px;
+	font-size: 14px;
 	padding: 16px 0;
 	position: relative;
 	text-align: center;
