--- a/public/front/assets/css/custom.css
+++ b/public/front/assets/css/custom.css
@@ -22,8 +22,15 @@
     width: 160px;
 }
 
-
-
+.btn-site
+{
+    background-color: #D62672;;
+    color: #fff;
+}
+.btn-quiz
+{
+    font-size: 18px;
+}
 
 .card-help {
     box-shadow: 0px 0px 59px -40px rgb(0 0 0 / 75%);
@@ -104,3 +111,27 @@
     height: 30px;
     border-radius: 100px;
 }
+
+
+            .quiz-float{
+                position:fixed;
+                display:inline-block;
+                width:60px;
+                height:60px;
+                line-height:60px;
+                bottom:30px;
+                right:30px;
+                background-color:#D62672;
+                color:#fff !important;
+                border-radius:50px;
+                text-align:center;
+                font-size:30px;
+                box-shadow: 2px 2px 3px #999;
+                z-index:100;
+            }
+            .quiz-float:hover{
+                color: #FFF;
+            }
+            .my-float{
+                margin-top:16px;
+            }
